# KIRA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/slack-memory-store/scripts/: add_memory.py
.github/workflows/: deploy.yml
app/cc_agents/: state_prompt.py
app/cc_agents/bot_call_detector/: agent.py
app/cc_agents/bot_thread_context_detector/: agent.py
app/cc_agents/memory_retriever/: agent.py
app/cc_agents/operator/: agent.py
app/cc_agents/proactive_confirm/: agent.py
app/cc_agents/simple_chat/: agent.py
app/cc_checkers/atlassian/: confluence_agent.py  confluence_checker.py  jira_agent.py  jira_checker.py
app/cc_checkers/ms365/: outlook_agent.py  outlook_checker.py
app/cc_utils/: confirm_db.py
app/cc_web_interface/routes/: meeting.py
app/cc_web_interface/static/: index.html
app/config/: settings.py
app/config/env/: dev.env.example
electron-app/: main.js  package-lock.json  package.json  platform-utils.js
electron-app/scripts/: generate-icons.js
vitepress-app/: getting-started.md  index.md
vitepress-app/.vitepress/: config.mjs
vitepress-app/features/: index.md
vitepress-app/ko/: index.md
vitepress-app/ko/setup/: ms365.md
